# PyLox

./: README.md  pyproject.toml  requirements.txt
src/: astprinter.py  environment.py  errors.py  expr.py  interpreter.py  lox_callable.py  lox_class.py  lox_function.py  lox_native.py  main.py  parser.py  pylox.py  resolver.py  return_class.py  scanner.py  stmt.py  tokenclass.py
src/PyLox/: environment.py  errors.py  expr.py  interpreter.py  lox_callable.py  lox_class.py  lox_function.py  lox_native.py  parser.py  pylox.py  resolver.py  return_class.py  scanner.py  stmt.py
test/: conftest.py
test/assignment/: test_assignment.py
test/block/: test_block.py
test/bool/: test_bool.py
test/call/: test_call.py
test/class/: test_class.py
test/closure/: test_closure.py
test/comments/: test_comments.py
test/constructor/: test_constructor.py
test/field/: get_on_function.lox  set_on_function.lox  test_fields.py
test/for/: test_for.py
test/function/: parameters.lox  test_function.py  too_many_parameters.lox
test/if/: test_if.py
test/inheritance/: test_inheritance.py
test/logical/: test_logical.py
test/method/: test_method.py  too_many_parameters.lox
test/misc/: test_misc.py
test/nil/: test_nil.py
test/number/: test_number.py
test/operator/: equals_class.lox  modulo.lox  modulo_nonnum_num.lox  modulo_num_nonnum.lox  power.lox  power_nonnum_num.lox  power_num_nonnum.lox  test_operator.py
test/print/: test_print.py
test/return/: test_return.py
test/string/: test_string.py
test/super/: parenthesized.lox  (+2 more)
tool/: generate_ast.lua
(+4 files in other folders)
