[project]
name = "PyLox"
version = "1.0"
description = "A Python 3.10 implementation of the Lox programming language"
readme = "README.md"
license = "LICENSE"
requires-python = ">= 3.10"
optional-dependencies = ["pytest~=7.2.1"]
authors = [{email = "matvey.science@gmail.com"}]
maintainers = [{email = "matvey.science@gmail.com"}]

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]
pythonpath = "src"
